--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <audio autoplay loop>
-  <source src="Zoe - Luna.mp3" type="audio/mpeg" />
+  <source src="musica/Zoe - Luna.mp3" type="audio/mpeg" />
   Tu navegador no soporta la reproducción de audio.
 </audio>
 
