--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <audio autoplay loop>
   <source src="musica/Zoe - Luna.mp3" type="audio/mpeg" />
+  <source src="musica/Zoe-Luna.ogg" type="audio/ogg" />
   Tu navegador no soporta la reproducción de audio.
 </audio>
 
