--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <audio autoplay loop>
-  <source src="musica/Zoe - Luna.mp3" type="audio/mpeg" />
-  <source src="musica/Zoe-Luna.ogg" type="audio/ogg" />
+  <source src="musica/zoe-Luna.ogg" type="audio/ogg" />
   Tu navegador no soporta la reproducción de audio.
 </audio>
 
